--- a/src/assets/styles/helpers.scss
+++ b/src/assets/styles/helpers.scss
@@ -8,8 +8,16 @@
   justify-content: center;
 }
 
+.justify-content-between {
+  justify-content: space-between;
+}
+
 .align-items-center {
   align-items: center;
+}
+
+.flex-grow-1 {
+  flex-grow: 1;
 }
 
 /*
