--- a/src/features/quiz/components/QuestionGrid/QuestionGrid.module.scss
+++ b/src/features/quiz/components/QuestionGrid/QuestionGrid.module.scss
@@ -3,4 +3,11 @@
   grid-template-columns: repeat(5, 1fr);
   column-gap: 8px;
   row-gap: 8px;
+
+  &-card {
+    // фикс для firefox-а
+    &:active, &:focus {
+      outline: none;
+    }
+  }
 }
