--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -3,3 +3,9 @@
 .layout {
   width: map-get($breakpoints, "xs");
 }
+
+@media (max-width: map-get($breakpoints, "xs")) {
+  .layout {
+    width: 100%;
+  }
+}
