feat: translate comments

--- a/src/assets/styles/custom-normalize.scss
+++ b/src/assets/styles/custom-normalize.scss
@@ -1,4 +1,4 @@
-// переопределение стилей normalize
+// overriding normalize
 $normalized_font_family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 
 $h1_margin: 0;
