--- a/src/assets/styles/helpers.scss
+++ b/src/assets/styles/helpers.scss
@@ -21,7 +21,7 @@
 }
 
 /*
- * Классы отступов взяты из https://gist.github.com/jacurtis/30da4bf9a6c9b9b5cc0aebac512ca7c9?permalink_comment_id=4323531#gistcomment-4323531
+ * @see https://gist.github.com/jacurtis/30da4bf9a6c9b9b5cc0aebac512ca7c9?permalink_comment_id=4323531#gistcomment-4323531
  */
 $spacings: (0, 1, 2, 3, 4, 5, auto);
 
